# comp-arch-uc3m

./: LICENSE  Makefile  README.md
bib/: comp-arch.bib
config/: common-defs.tex  common-pkg.tex  common.tex  cpp11-config.tex  slides-config.tex  slides-start-one.tex  slides-start-two.tex  tikz-config.tex
config/en/: common.tex  defs-common.tex  ex-common-base-lab.tex  ex-common-base.tex  ex-common-lab.tex  ex-common.tex  exer-base.tex  exer-config-full.tex  exer-config-ocw.tex  slides-config-ocw.tex  slides-config.tex  slides-preamble-ocw.tex  slides-preamble.tex
config/es/: common.tex  defs-common.tex  ej-common-lab.tex  ej-common.tex  ex-common-base-lab.tex  ex-common-base.tex  exer-base.tex  slides-config-ocw.tex  slides-config.tex  slides-preamble-ocw.tex  slides-preamble.tex
en/: Makefile.mk  license-cc.tex
en/00-intro/: Makefile.def  Makefile.mk  content.tex  course-intro.tex  evaluation.tex  prof.tex  resources.tex  schedule.tex  slides-hout.tex  slides-lect.tex  slides-ocw.tex  slides.tex
en/ex/: Makefile.def  Makefile.mk
en/labs/: Makefile.def  Makefile.mk
en/m1-01-fund/: Makefile.def  Makefile.mk  classes.tex  comparch.tex  concl.tex  slides.tex  (+5 more)
es/: Makefile.mk  license-cc.tex
int/m6-01-cppintro/vector/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  marks.cpp  unique.cpp  vec1.cpp  vec2.cpp  vec3.cpp
int/m6-01-cppintro/vector/.devcontainer/: Dockerfile  devcontainer.json
lab/04-omp-sol/: .clang-tidy  CMakeLists.txt  pipar.cpp  piseq.cpp
lab/04-omp/hello/: .clang-tidy  CMakeLists.txt  expar.cpp  exseq.cpp
lab/04-omp/pi/: .clang-tidy  .gitignore  CMakeLists.txt  pipar.cpp  piseq.cpp  piseqtime.cpp
(+1082 files in other folders)
